--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="project">
                         <h3>Bug Dodger</h3>
                         <video width="320" height="240" controls>
-                            <source src="images/Bug Dodger.mp4" type="video/mp4">                            
+                            <source src="images/Bug-Dodger.mp4" type="video/mp4">                            
                             Your browser does not support the video tag.
                         </video>
                         <p><a href="https://kanch-prog.github.io/csb-kh57s2/">https://kanch-prog.github.io/csb-kh57s2/</a></p>
@@ -120,7 +120,7 @@
                     <div class="project">
                         <h3>Real Estate Website</h3>
                         <video width="320" height="240" controls>
-                            <source src="images/real_estate.mp4" type="video/mp4">                            
+                            <source src="images/real-estate.mp4" type="video/mp4">                            
                             Your browser does not support the video tag.
                         </video>
                         <p><a href="https://github.com/Kanch-prog/React_real_estate">https://github.com/Kanch-prog/React_real_estate</a></p>
